# ChangeLog for genkernel
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Apply patch from robbat2 to fix whitespace breakage in multipath code

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh,
  genkernel.conf:
  Apply patch from robbat2 to finish wiring up multipath support

  06 Mar 2009; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Modify append_data to die on 0 arguments and check arg 2 with isTrue().
  Based on a patch from robbat2

  20 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> arch/sparc64/config.sh,
  gen_compile.sh, gen_funcs.sh, gen_package.sh:
  Add support for multiple possible kernel binary paths for gentoo bug
  #255085

  04 Feb 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc:
  Comment out the exec line for console=*, since it seems to blow up when
  the param isn't a true device node, such as ttyS0,115200n8

  19 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Remove detect_sbp2_devices() for gentoo bug #239474

  16 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> genkernel.conf:
  Add commented out DISKLABEL=yes option for gentoo bug #229847

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Added more verbosity to the auto-detection section.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS:
  Updated the AUTHORS section and the header for the ChangeLog, to reflect
  that individual authors now retain their copyright to code they submit.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> TODO:
  Added a note about Security Tokens, cleaned up the block device section, and
  added a section about autodetection.

  08 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> HACKING:
  Adding a note about contacting me to HACKING.
